Horizontal scroll fix

--- a/style.css
+++ b/style.css
@@ -5,15 +5,9 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    margin: 0 auto;
     background-color: teal;
     color: white;
-}
-
-
-
-.container {
-    margin: 0 auto;
     display: grid;
     justify-content: center;
     align-self: start;
